--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.18",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
